@@ -5,10 +5,7 @@ import org.spockframework.runtime.extension.ExtensionAnnotation;
 import org.spockframework.runtime.extension.builtin.PendingFeatureExtension;
 import org.spockframework.util.Beta;
 
-import java.lang.annotation.ElementType;
-import java.lang.annotation.Retention;
-import java.lang.annotation.RetentionPolicy;
-import java.lang.annotation.Target;
+import java.lang.annotation.*;
 
 /**
  * Indicates that the feature is not fully implemented yet and should not be reported as error.
@@ -47,4 +44,11 @@ public @interface PendingFeature {
    * @return array of Exception classes to ignore.
    */
   Class<? extends Throwable>[] exceptions() default {Exception.class};
+
+  /**
+   * The reason why this feature is pending
+   *
+   * @return reason why this feature is pending
+   */
+  String reason() default "";
 }
