@@ -6,6 +6,8 @@ include::include.adoc[]
 
 === What's New In This release
 
+* Improve `@PendingFeature` now has an optional `reason` attribute
+
 == 1.2-RC2 (2018-09-04)
 
 === What's New In This release
